@@ -7,15 +7,14 @@ import io.kestra.core.models.tasks.RunnableTask;
 import io.kestra.core.runners.RunContext;
 import io.kestra.plugin.fs.local.models.File;
 import io.swagger.v3.oas.annotations.media.Schema;
+import jakarta.validation.constraints.NotNull;
 import lombok.*;
 import lombok.experimental.SuperBuilder;
 
-import jakarta.validation.constraints.NotNull;
-
-import java.nio.file.*;
+import java.nio.file.Files;
+import java.nio.file.Path;
 import java.nio.file.attribute.BasicFileAttributes;
-import java.util.*;
-import java.util.stream.Collectors;
+import java.util.Objects;
 
 import static io.kestra.core.utils.Rethrow.throwFunction;
 
@@ -80,6 +79,12 @@ public class List extends AbstractLocalTask implements RunnableTask<List.Output>
     @Builder.Default
     private Property<Boolean> recursive = Property.ofValue(false);
 
+    @Builder.Default
+    @Schema(
+        title = "The maximum number of files to retrieve at once"
+    )
+    private Property<Integer> maxFiles = Property.ofValue(25);
+
     @Override
     public Output run(RunContext runContext) throws Exception {
         String resolvedDirectory = runContext.render(this.from).as(String.class).orElseThrow();
@@ -93,15 +98,22 @@ public class List extends AbstractLocalTask implements RunnableTask<List.Output>
         String fileRegex = this.regExp != null ? runContext.render(this.regExp).as(String.class).orElseThrow() : ".*";
         int maxDepth = runContext.render(recursive).as(Boolean.class).orElse(false) ? Integer.MAX_VALUE : 1;
 
-        java.util.List<File> files = Files.find(directoryPath, maxDepth, (path, basicFileAttributes) -> {
-                return basicFileAttributes.isRegularFile() && path.toString().matches(fileRegex);
-            })
+        java.util.List<File> files = Files.find(directoryPath, maxDepth, (path, basicFileAttributes) -> basicFileAttributes.isRegularFile() && path.toString().matches(fileRegex))
             .map(throwFunction(path -> {
                 BasicFileAttributes attrs = Files.readAttributes(path, BasicFileAttributes.class);
                 return File.from(path, attrs);
             }))
             .filter(Objects::nonNull)
-            .collect(Collectors.toList());
+            .toList();
+
+        int rMaxFiles = runContext.render(this.maxFiles).as(Integer.class).orElse(25);
+        if (files.size() > rMaxFiles) {
+            runContext.logger().warn("Too many files to process, skipping");
+            return Output.builder()
+                .files(java.util.List.of())
+                .count(0)
+                .build();
+        }
 
         return Output.builder()
             .files(files)
